data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3760.wast
;; 9. **Edge Case with In-Between Index in 'br_table'**:    - Test an edge condition where 'br_table' index falls between valid ranges, followed by a function call.    - Implement a 'br_table' with valid indices, introducing an index in-between which should gracefully resolve or trap.    - Focused on ensuring intermediate index handling doesn’t corrupt subsequent function invocation.

(assert_invalid
  (module
    (func $edge-case-br-table (param i32) (result i32)
      (block $lbl0
        (br_table $lbl0 (i32.const 1))
      )
      (call 1 (i32.const 0))
    )
    (func (result i32) (i32.const 0))
  )
  "type mismatch"
)